# agent-chat-cli

./: Makefile  README.md  pyproject.toml
agent_chat_cli/: __main__.py  a2a_client.py  acp_client.py  chat_interface.py  mcp_client.py
agent_cli_chat_client/: a2a_client.py  acp_client.py
