[project]
name = "agent-chat-cli"
version = "0.1.0"
description = ""
authors = [
  {name = "Sri Aradhyula",email = "sraradhy@cisco.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
  "a2a-sdk>=0.2.4",
  "agntcy-acp>=1.4.2,<4.0.0",
  "click>=8.2.1",
  "dotenv>=0.9.9",
  "httpx>=0.28.1",
  "httpx-sse>=0.4.0",
  "rich>=14.0.0",
]

[project.scripts]
agent-chat-cli = "agent_chat_cli.__main__:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
